# hakkasystem

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  from ultralytics import YOLO.py  main.py  models.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.py
llm test/: hakka_test.ipynb  hakka_test1.ipynb
routers/: auth.py  learning.py  practice.py  profile.py  recognition.py  saved_words.py
static/: auth.js  game.html  index.html  login.html  practice.html  profile.html  recognition.html  record.html  style.css
voice_practice/: requirements.txt  聲紋對比測試_1.py
voice_practice/data/: db.csv
