[project]
name = "hakka"
version = "0.1.0"
description = ""
authors = [
    {name = "吳怡臻",email = "s0903057896@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "librosa (>=0.10.0,<1.0.0)",
    "pydub (>=0.25.0,<1.0.0)",
    "scipy (>=1.13.0,<2.0.0)",
    "soundfile (>=0.12.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
